# automation-server-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/automation_server_client/: _config.py  _logging.py  _models.py  _server.py
tests/: conftest.py  test_logging.py  test_pydantic_models.py  test_workqueue.py
